# AIUPred

./: .gitignore  Dockerfile  Dockerfile.gpu  LICENSE.md  README.md  aiupred.py  aiupred_lib.py  example.py  main.nf  nextflow.config  pyproject.toml  requirements.txt  test.fasta
aiupred/: __init__.py  cli.py  models.py  predictor.py  utils.py
aiupred.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: regression.pt
examples/: low_memory_predictions.py  multiple_sequence_prediction.py  single_sequenence_prediction.py
nf/: README.md  main.nf  nextflow.config
nf/conf/: base.config
nf/env/: aiupred.yml
nf/modules/local/: aiupred.nf
nf/tests/data/: test.fasta
nf/tests/results/test/: test.aiupred.tsv
